--- a/css/main.css
+++ b/css/main.css
@@ -907,6 +907,24 @@ h4 {
   margin-top: 6rem;
   background-color: #f7e7e6;
   padding: 3rem 4rem;
+  display: none;
+}
+
+.activeAnwser {
+  margin-top: 6rem;
+  background-color: #f7e7e6;
+  padding: 3rem 4rem;
+  display: block;
+
+}
+.activeAnwser:before {
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: -6rem;
+  border: 3rem solid transparent;
+  border-bottom: 3rem solid #f7e7e6;
 }
 .often-questions .accordion-block:before {
   content: '';
@@ -1727,4 +1745,8 @@ h4 {
     padding: 3rem 3rem;
     width: 25rem;
   }
+  .panel-active {
+  display: block
+}
+
 }
