--- a/css/main.css
+++ b/css/main.css
@@ -1728,4 +1728,10 @@ h4 {
     padding: 3rem 3rem;
     width: 25rem;
   }
+  .name-design {
+    margin-right: 40px;
+  }
+  .phone-design {
+    margin-right: 40px;
+  }
 }
